# iago-os

./: .gitattributes  .gitignore  CLAUDE.local.md.template  CLAUDE.md  CLAUDE.md.backup  CONTEXT-PHASE3-PROMPTS.md  CONTEXT-PHASE5-PROMPT.md  CONTEXT-STARTER-PROMPT.md  HANDOFF.md  IAGO-OS-HANDOFF.md  README.md  package-lock.json  package.json
.claude/: settings.json
.iago/: .gitignore  CONTEXT.md  PROJECT.md  README.md  ROADMAP.md  STATE.md  config.json  tmp-prev-review.txt  tmp-review-checks.md  tmp-review-diff.txt
docs/: ARCHITECTURE.md  GITHUB-PIPELINE.md  IAGO-DASHBOARD.md  MANUAL.md  SETUP.md  SKILLS.md  WORKFLOW.md  memory-stack.md  pr-review-pipeline.md
mcp-servers/youtube-transcript/: .gitignore  README.md  pyproject.toml
mcp-servers/youtube-transcript/src/mcp_youtube_transcript/: __init__.py  server.py  transcript.py
mcp-servers/youtube-transcript/tests/: test_transcript.py
n8n/: README.md
research/: CHERRY-PICK-PLAN.md  DECISION-claude-md.md  DECISION-discipline.md  DECISION-execution.md  DECISION-paperclip.md  DECISION-skills.md  DECISION-workflow-foundation.md  SPRINT-STATUS.md  ecc-analysis.md  gsd-analysis.md  hooks-synthesis.md  munet-web-playbook.md  ruflo-analysis.md  superpowers.md  the-architect.md
runtime/: .env.example  .gitignore  CONTEXT.md  PHASE-1-EVIDENCE.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: check-clean-tree.sh  check-clean-tree.test.sh  console-check.mjs  execute-pipeline.sh  measure-build-gate-rss.sh  metrics-aggregate.mjs  new-client.ps1  new-client.sh  (+14 more)
(+654 files in other folders)
