[project]
name = "mcp-youtube-transcript"
version = "0.1.0"
description = "MCP server for extracting YouTube transcripts via youtube-transcript-api"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "youtube-transcript-api>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_youtube_transcript"]
